# rich_logger

./: README.md  logger.py  main.py  pyproject.toml
rich_logger/: __init__.py  config.py  logger.py  run.py  sink.py
scripts/: __init__.py  example_dynamic_config.py  quickstart.py
tests/: test_examples.py  test_rich_logger.py
